# aoc2023

./: Cargo.toml
day1/: Cargo.toml  README.md
day2/: Cargo.toml  README.md
day2/src/: lib.rs
day3/: Cargo.toml  README.md
day4/: Cargo.toml  README.md
day4/src/: lib.rs
day5/: Cargo.toml
day5/src/: lib.rs
day6/: Cargo.toml  ignition_f64
day6/src/: lib.rs
day7/: Cargo.toml
day8/: Cargo.toml
day8/src/: lib.rs
