[workspace]
resolver = "2"
members = [
	# "day25",
	# "day24",
	# "day23",
	# "day22",
	# "day21",
	# "day20",
	# "day19",
	# "day18",
	# "day17",
	# "day16",
	# "day15",
	# "day14",
	# "day13",
	# "day12",
	# "day11",
	# "day10",
	# "day9",
	# "day8",
	# "day7",
	# "day6",
	# "day5",
	# "day4",
	# "day3",
	"day2",
	"day1"
, "day3"]

